# rust-actixweb-practice

./: Cargo.toml  README.md
migrations/: 20200809111418_create_table.sql
src/: main.rs
