[package]
name = "rust-actixweb-practice"
version = "0.1.0"
authors = ["Stefan Utamaru <stefafafan@hatena.ne.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
sqlx = "0.3.5"
serde = "1.0.115"
serde_json = "1.0.57"
